feat: 🎸 管理者ダッシュボードで表示する機能のAPIとフロントエンドを実装
